<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainMenu" android:background="@color/mainBgStart">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/constraintLayout2">

        <TextView
                android:text="@string/hand_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/seekBar2" app:layout_constraintStart_toStartOf="@+id/seekBar2"
        />
        <SeekBar
                style="@android:style/Widget.Material.SeekBar.Discrete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:max="2"
                android:progress="0"
                android:id="@+id/seekBar2" android:layout_marginTop="20dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:indeterminate="false"
                app:layout_constraintWidth_percent="0.75"/>
        <TextView
                android:text="@string/mode_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView4" android:textSize="24sp"
                android:textStyle="bold"/>
        <TextView
                android:text="@string/auto_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="@+id/seekBar2"
                app:layout_constraintTop_toTopOf="@+id/textView7"/>
        <TextView
                android:text="@string/remote_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/seekBar2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>