<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="@color/mainBgStart">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layoutMode="opticalBounds"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            android:divider="@android:drawable/divider_horizontal_bright">
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0.5"
                android:gravity="bottom|center_horizontal">
            <TextView
                    android:text="@string/connection_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView2" android:textSize="24sp"
                    android:textStyle="bold" android:textColor="@color/mainFgColor"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0.7">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1.0"/>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="0.5"
                    android:gravity="center_horizontal|center_vertical">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/addressBox" android:hint="@string/address_box"
                        android:text="@string/default_address" android:textColor="@color/mainFgColor"
                        style="@style/Widget.AppCompat.EditText" android:singleLine="true"
                />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1.0">
            </TableRow>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0.7">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1.0"/>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="0.5"
                    android:gravity="center_horizontal|center_vertical">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/portBox" android:hint="@string/port_box" android:text="@string/default_port"
                        android:textColor="@color/mainFgColor"
                />
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1.0">
            </TableRow>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0.8">
        </TableRow>
    </LinearLayout>
    <androidx.constraintlayout.widget.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline3"
            app:layout_constraintGuide_percent="0.5" android:background="#00FFFFFF" android:visibility="visible"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@+id/guideline3" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    >
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1.0"
                android:gravity="bottom|center_horizontal">
            <TextView
                    android:text="@string/login_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView3" android:textSize="24sp"
                    android:textStyle="bold" android:textColor="@color/mainFgColor"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="0.5">
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1.0"/>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="0.5">
                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_weight="1.0"
                            android:gravity="center_horizontal|center_vertical">
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"
                                android:ems="10"
                                android:id="@+id/userNameBox" android:hint="@string/user_name_box"
                                android:textColor="@color/mainFgColor"
                        />
                    </TableRow>
                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_weight="1.0"
                            android:gravity="center_horizontal|center_vertical">
                        <EditText
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:ems="10"
                                android:id="@+id/passwordBox" android:hint="@string/password_box"
                                android:textColor="@color/mainFgColor"
                        />
                    </TableRow>
                    <TableRow
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" android:layout_weight="1.0"
                            android:gravity="center_horizontal|center_vertical">
                        <Button
                                android:text="@string/connect_button"
                                android:layout_height="wrap_content" android:id="@+id/connectButton"
                                android:background="@color/mainBgEnd" android:autoText="false"
                                android:textColor="@color/mainFgColor" android:layout_width="wrap_content"
                                android:minWidth="125dp" android:onClick="connectToServer"/>
                    </TableRow>
                </LinearLayout>
            </TableRow>
            <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_weight="1.0">
            </TableRow>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1.0">
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>